# youtube-to-kimi

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml
.kimi/skills/yt-dlp-video-analyze/: SKILL.md
demo/: package-lock.json  package.json
demo/src/: Intro.tsx  Root.tsx
src/youtube_to_kimi/: __init__.py  analyzer.py  check_deps.py  cli.py  downloader.py  exceptions.py  splitter.py  utils.py
tests/: test_analyzer.py  test_check_deps.py  test_cli.py  test_downloader.py  test_splitter.py  test_utils.py
